midpoint-live-demo/overlays/devel/network-policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: demo
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
    - toEndpoints:
        - {}
    - toCIDR:
        - 10.200.130.1/32
      toPorts:
        - ports:
            - port: '3128'
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.42.0.0/16
            - 10.43.0.0/16
            - 10.200.130.0/24
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
